[package]
name = "game_logic"
version = "0.1.1"
authors = ["Eyal Litvin <eyalitvin@gmail.com>"]
description = "A crate for simulating turn-based games with customizable game logic and agent behavior."
documentation = "https://docs.rs/game_logic"
edition = "2021"
license = "MIT"
repository = "https://github.com/EyalLitvin/game_logic"

[dependencies]
indexmap = "2.8.0"
rand = "0.9.0"
